--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       }
       .chat-container {
         position: absolute;
-        top: 0;
-        right: 0;
-        height: 100vh;
-        width: 60vw;
+        top: 5vh;
+        right: 5vw;
+        height: 90vh;
+        width: 55vw;
         padding: 20px;
         display: flex;
         flex-direction: column;
@@ -37,6 +37,7 @@
         backdrop-filter: blur(12px);
         background: rgba(255, 255, 255, 0.3);
         box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
+        border-radius: 20px;
       }
       .messages {
         flex: 1;
@@ -133,7 +134,6 @@
         if ((e.ctrlKey || e.metaKey) && e.key === "Enter") sendMessage();
       });
 
-      // 添加浮窗点击自动填充输入框
       document.querySelectorAll(".message.quick").forEach(el => {
         el.addEventListener("click", () => {
           const input = document.getElementById("user-input");
