--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         top: 17vh;
         right: 7vw;
         height: 76vh;
-        width: min(90vw, 600px);
+        width: 50vw;
         padding: 20px;
         display: flex;
         flex-direction: column;
