--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>曹先生智能问答</title>
+    <title>大梦红楼 · 曹先生</title>
     <style>
       * {
         margin: 0;
@@ -14,6 +14,7 @@
         height: 100%;
         font-family: -apple-system, BlinkMacSystemFont, sans-serif;
         overflow: hidden;
+        background: #000;
       }
       .video-bg {
         position: fixed;
@@ -30,7 +31,6 @@
         right: 7vw;
         height: 76vh;
         width: 50vw;
-        padding: 20px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -38,6 +38,7 @@
         background: rgba(255, 255, 255, 0.3);
         box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
         border-radius: 20px;
+        padding: 20px;
       }
       .messages {
         flex: 1;
@@ -46,12 +47,13 @@
       }
       .message {
         margin-bottom: 12px;
-        background: rgba(255, 255, 255, 0.8);
+        background: rgba(255, 255, 255, 0.85);
         padding: 10px 14px;
         border-radius: 12px;
-        max-width: 90%;
+        max-width: 100%;
+        white-space: pre-wrap;
+        word-break: break-word;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-        cursor: pointer;
       }
       .input-area {
         display: flex;
@@ -76,18 +78,28 @@
         cursor: pointer;
         font-weight: bold;
       }
+      .quick-button {
+        display: inline-block;
+        background: #eee;
+        border: 1px solid #ccc;
+        border-radius: 12px;
+        padding: 6px 12px;
+        margin: 4px 6px 0 0;
+        cursor: pointer;
+        font-size: 14px;
+      }
     </style>
   </head>
   <body>
-    <video class="video-bg" src="video.mov" autoplay muted loop></video>
+    <video class="video-bg" src="video/46.mp4" muted playsinline autoplay loop></video>
     <div class="chat-container">
       <div class="messages" id="chat-box">
-        <div class="message">您好，请叫我曹先生</div>
-        <div class="message quick">🔍 红楼梦中有哪些美食？</div>
-        <div class="message quick">🔍 红楼梦中有哪些判词？</div>
-        <div class="message quick">🔍 红楼梦中有哪些故事？</div>
-        <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
-        <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
+        <div class="message">您好，我是曹先生，欢迎提问。</div>
+        <div class="message quick-button">红楼梦中有哪些美食？</div>
+        <div class="message quick-button">红楼梦中有哪些判词？</div>
+        <div class="message quick-button">红楼梦中有哪些故事？</div>
+        <div class="message quick-button">大梦·红楼有哪些值得一看的亮点？</div>
+        <div class="message quick-button">大梦·红楼和其他红楼梦演出有哪些不同？</div>
       </div>
       <div class="input-area">
         <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
@@ -96,23 +108,23 @@
     </div>
 
     <script>
+      const chatBox = document.getElementById("chat-box");
+
       async function sendMessage() {
         const input = document.getElementById("user-input");
         const question = input.value.trim();
         if (!question) return;
 
-        const chatBox = document.getElementById("chat-box");
         const userMsg = document.createElement("div");
         userMsg.className = "message";
         userMsg.textContent = question;
         chatBox.appendChild(userMsg);
-
         input.value = "";
         chatBox.scrollTop = chatBox.scrollHeight;
 
         const responseMsg = document.createElement("div");
         responseMsg.className = "message";
-        responseMsg.textContent = "正在思考...";
+        responseMsg.textContent = "思考中，请稍候...";
         chatBox.appendChild(responseMsg);
 
         try {
@@ -122,7 +134,7 @@
             body: JSON.stringify({ question })
           });
           const data = await res.json();
-          responseMsg.textContent = data.answer || "曹先生一时语塞，请稍后再问。";
+          responseMsg.innerHTML = parseQuickTags(data.answer || "曹先生一时语塞，请稍后再问。");
         } catch (err) {
           responseMsg.textContent = "网络错误，请稍后重试。";
         }
@@ -134,13 +146,23 @@
         if ((e.ctrlKey || e.metaKey) && e.key === "Enter") sendMessage();
       });
 
-      document.querySelectorAll(".message.quick").forEach(el => {
-        el.addEventListener("click", () => {
-          const input = document.getElementById("user-input");
-          input.value = el.textContent.replace(/^🔍\s*/, "");
-          input.focus();
+      document.querySelectorAll(".quick-button").forEach(btn => {
+        btn.addEventListener("click", () => {
+          document.getElementById("user-input").value = btn.textContent;
+          document.getElementById("user-input").focus();
         });
       });
+
+      function parseQuickTags(text) {
+        return text.replace(/<quick_question>(.*?)<\/quick_question>/g, (match, p1) => {
+          return `<span class='quick-button' onclick='insertQuestion("${p1}")'>${p1}</span>`;
+        });
+      }
+
+      function insertQuestion(content) {
+        document.getElementById("user-input").value = content;
+        document.getElementById("user-input").focus();
+      }
     </script>
   </body>
 </html>
