--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
           });
           const data = await res.json();
           const cleanAnswer = (data.answer || "").replace(/<\/?quick_question>/g, "");
-          
-          responseMsg.textContent = data.answer || "曹先生一时语塞，请稍后再问。";
+          responseMsg.textContent = cleanAnswer || "曹先生一时语塞，请稍后再问。";
+
         } catch (err) {
           responseMsg.textContent = "网络错误，请稍后重试。";
         }
