--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="message quick">🔍 红楼梦中有哪些故事？</div>
         <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
         <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
-        <div class="message quick">🔍 曹先生，你是哪里来的？</div>
+        <div class="message quick">🔍 曹先生你是哪里来的？</div>
       </div>
       <div class="input-area">
         <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
