--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
         cursor: pointer;
         font-weight: bold;
       }
+      .suggestions {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 10px;
+      }
     </style>
   </head>
   <body>
@@ -103,21 +109,18 @@
         if (!question) return;
 
         const chatBox = document.getElementById("chat-box");
-
-        // 用户提问消息
         const userMsg = document.createElement("div");
         userMsg.className = "message";
         userMsg.textContent = question;
         chatBox.appendChild(userMsg);
 
-        // 回答消息占位
+        input.value = "";
+        chatBox.scrollTop = chatBox.scrollHeight;
+
         const responseMsg = document.createElement("div");
         responseMsg.className = "message";
         responseMsg.textContent = "思考中...";
         chatBox.appendChild(responseMsg);
-
-        input.value = "";
-        chatBox.scrollTop = chatBox.scrollHeight;
 
         try {
           const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
@@ -125,34 +128,36 @@
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ question })
           });
+          const data = await res.json();
+          const raw = data.answer || "";
 
-          const reader = res.body.getReader();
-          const decoder = new TextDecoder("utf-8");
-          let fullText = "";
+          const quickMatches = [...raw.matchAll(/<quick_question>(.*?)<\/quick_question>/g)];
+          const suggestions = quickMatches.map(m => m[1]);
+          const cleanAnswer = raw.replace(/<quick_question>.*?<\/quick_question>/g, "").trim();
 
-          while (true) {
-            const { done, value } = await reader.read();
-            if (done) break;
-            const chunk = decoder.decode(value, { stream: true });
+          responseMsg.textContent = cleanAnswer || "曹先生一时语塞，请稍后再问。";
 
-            const lines = chunk.split("\n").filter(line => line.startsWith("data: "));
-            for (const line of lines) {
-              const jsonStr = line.replace(/^data:\s*/, "");
-              try {
-                const json = JSON.parse(jsonStr);
-                const content = json.data || json.content || json.answer || "";
-                fullText += content;
-                responseMsg.textContent = fullText;
-                chatBox.scrollTop = chatBox.scrollHeight;
-              } catch (e) {
-                console.warn("解析失败：", jsonStr);
-              }
-            }
+          if (suggestions.length > 0) {
+            const suggestionBox = document.createElement("div");
+            suggestionBox.className = "suggestions";
+            suggestions.forEach(q => {
+              const suggestion = document.createElement("div");
+              suggestion.className = "message quick";
+              suggestion.textContent = "🔍 " + q;
+              suggestion.onclick = () => {
+                input.value = q;
+                input.focus();
+              };
+              suggestionBox.appendChild(suggestion);
+            });
+            chatBox.appendChild(suggestionBox);
           }
+
         } catch (err) {
-          console.error(err);
           responseMsg.textContent = "网络错误，请稍后重试。";
         }
+
+        chatBox.scrollTop = chatBox.scrollHeight;
       }
 
       document.getElementById("user-input").addEventListener("keydown", function (e) {
