--- a/index.html
+++ b/index.html
@@ -1,176 +1,202 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>曹先生智能问答</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      html, body {
-        height: 100%;
-        font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-        overflow: hidden;
-      }
-      .video-bg {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        object-fit: cover;
-        z-index: -1;
-      }
-      .chat-container {
-        position: absolute;
-        top: 17vh;
-        right: 7vw;
-        height: 76vh;
-        width: 50vw;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        backdrop-filter: blur(12px);
-        background: rgba(255, 255, 255, 0.3);
-        box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
-        border-radius: 20px;
-      }
-      .messages {
-        flex: 1;
-        overflow-y: auto;
-        padding-right: 10px;
-      }
-      .message {
-        margin-bottom: 12px;
-        background: rgba(255, 255, 255, 0.8);
-        padding: 10px 14px;
-        border-radius: 12px;
-        max-width: 90%;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-        cursor: pointer;
-      }
-      .input-area {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-        padding-top: 10px;
-      }
-      .input-area input {
-        flex: 1;
-        padding: 12px;
-        font-size: 16px;
-        border-radius: 999px;
-        border: none;
-        outline: none;
-      }
-      .input-area button {
-        padding: 10px 18px;
-        border: none;
-        border-radius: 999px;
-        background-color: #d4237a;
-        color: white;
-        cursor: pointer;
-        font-weight: bold;
-      }
-      .suggestions {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin-top: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <video class="video-bg" src="video.mov" autoplay muted loop></video>
-    <div class="chat-container">
-      <div class="messages" id="chat-box">
-        <div class="message">您好，请叫我曹先生</div>
-        <div class="message quick">🔍 红楼梦中有哪些美食？</div>
-        <div class="message quick">🔍 红楼梦中有哪些判词？</div>
-        <div class="message quick">🔍 红楼梦中有哪些故事？</div>
-        <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
-        <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
-        <div class="message quick">🔍 曹先生你是哪里来的？</div>
-      </div>
-      <div class="input-area">
-        <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
-        <button onclick="sendMessage()">发送</button>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>曹先生智能问答</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      overflow: hidden;
+    }
+    .video-bg {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      object-fit: cover;
+      z-index: -1;
+    }
+    .chat-container {
+      position: absolute;
+      top: 17vh;
+      right: 7vw;
+      height: 76vh;
+      width: 50vw;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      backdrop-filter: blur(12px);
+      background: rgba(255, 255, 255, 0.3);
+      box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
+      border-radius: 20px;
+    }
+    .messages {
+      flex: 1;
+      overflow-y: auto;
+      padding-right: 10px;
+    }
+    .message {
+      margin-bottom: 12px;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 10px 14px;
+      border-radius: 12px;
+      max-width: 90%;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+    .quick-question {
+      background: #f0f5ff;
+      padding: 10px;
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 8px;
+      font-size: 15px;
+      transition: background 0.2s;
+    }
+    .quick-question:hover {
+      background: #e0ebff;
+    }
+    .input-area {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      padding-top: 10px;
+    }
+    .input-area input {
+      flex: 1;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 999px;
+      border: none;
+      outline: none;
+    }
+    .input-area button {
+      padding: 10px 18px;
+      border: none;
+      border-radius: 999px;
+      background-color: #d4237a;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <video class="video-bg" src="video.mov" autoplay muted loop></video>
+
+  <div class="chat-container">
+    <div class="messages" id="chat-box">
+      <div class="message">您好，请叫我曹先生</div>
+      <div class="message quick">🔍 红楼梦中有哪些美食？</div>
+      <div class="message quick">🔍 红楼梦中有哪些判词？</div>
+      <div class="message quick">🔍 红楼梦中有哪些故事？</div>
+      <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
+      <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
     </div>
+    <div class="input-area">
+      <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
+      <button onclick="sendMessage()">发送</button>
+    </div>
+  </div>
 
-    <script>
-      async function sendMessage() {
-        const input = document.getElementById("user-input");
-        const question = input.value.trim();
-        if (!question) return;
+  <script>
+    async function sendMessage() {
+      const input = document.getElementById("user-input");
+      const question = input.value.trim();
+      if (!question) return;
 
-        const chatBox = document.getElementById("chat-box");
-        const userMsg = document.createElement("div");
-        userMsg.className = "message";
-        userMsg.textContent = question;
-        chatBox.appendChild(userMsg);
+      const chatBox = document.getElementById("chat-box");
 
-        input.value = "";
-        chatBox.scrollTop = chatBox.scrollHeight;
+      // 显示用户提问
+      const userMsg = document.createElement("div");
+      userMsg.className = "message";
+      userMsg.textContent = question;
+      chatBox.appendChild(userMsg);
 
-        const responseMsg = document.createElement("div");
-        responseMsg.className = "message";
-        responseMsg.textContent = "思考中...";
-        chatBox.appendChild(responseMsg);
+      // 显示AI响应容器
+      const aiMsg = document.createElement("div");
+      aiMsg.className = "message";
+      chatBox.appendChild(aiMsg);
 
-        try {
-          const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ question })
-          });
-          const data = await res.json();
-          const raw = data.answer || "";
+      // 清空输入框
+      input.value = "";
+      chatBox.scrollTop = chatBox.scrollHeight;
 
-          const quickMatches = [...raw.matchAll(/<quick_question>(.*?)<\/quick_question>/g)];
-          const suggestions = quickMatches.map(m => m[1]);
-          const cleanAnswer = raw.replace(/<quick_question>.*?<\/quick_question>/g, "").trim();
+      try {
+        const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ question }),
+        });
 
-          responseMsg.textContent = cleanAnswer || "曹先生一时语塞，请稍后再问。";
+        const reader = res.body.getReader();
+        const decoder = new TextDecoder("utf-8");
+        let buffer = "";
 
-          if (suggestions.length > 0) {
-            const suggestionBox = document.createElement("div");
-            suggestionBox.className = "suggestions";
-            suggestions.forEach(q => {
-              const suggestion = document.createElement("div");
-              suggestion.className = "message quick";
-              suggestion.textContent = "🔍 " + q;
-              suggestion.onclick = () => {
-                input.value = q;
-                input.focus();
-              };
-              suggestionBox.appendChild(suggestion);
-            });
-            chatBox.appendChild(suggestionBox);
+        while (true) {
+          const { done, value } = await reader.read();
+          if (done) break;
+
+          buffer += decoder.decode(value, { stream: true });
+          const lines = buffer.split("\n\n");
+
+          for (let i = 0; i < lines.length - 1; i++) {
+            const line = lines[i].replace(/^data: /, "").trim();
+            if (line) {
+              try {
+                const json = JSON.parse(line);
+                const raw = json.data?.content || json.content || "";
+                const clean = raw.replace(/<\/?quick_question>/g, "");
+                aiMsg.textContent += clean;
+              } catch (e) {
+                aiMsg.textContent += line;
+              }
+            }
           }
+          buffer = lines[lines.length - 1];
+          chatBox.scrollTop = chatBox.scrollHeight;
+        }
 
-        } catch (err) {
-          responseMsg.textContent = "网络错误，请稍后重试。";
+        // 解析 quick questions
+        const quickQuestions = [];
+        const quickRegex = /<quick_question>(.*?)<\/quick_question>/g;
+        let match;
+        while ((match = quickRegex.exec(buffer))) {
+          quickQuestions.push(match[1]);
+        }
+        if (quickQuestions.length > 0) {
+          quickQuestions.forEach(q => {
+            const btn = document.createElement("div");
+            btn.className = "quick-question";
+            btn.textContent = q;
+            btn.onclick = () => {
+              document.getElementById("user-input").value = q;
+              document.getElementById("user-input").focus();
+            };
+            chatBox.appendChild(btn);
+          });
         }
 
         chatBox.scrollTop = chatBox.scrollHeight;
+
+      } catch (err) {
+        aiMsg.textContent = "❌ 网络错误，请稍后再试";
       }
+    }
 
-      document.getElementById("user-input").addEventListener("keydown", function (e) {
-        if ((e.ctrlKey || e.metaKey) && e.key === "Enter") sendMessage();
-      });
+    document.getElementById("user-input").addEventListener("keydown", function (e) {
+      if ((e.ctrlKey || e.metaKey) && e.key === "Enter") sendMessage();
+    });
 
-      document.querySelectorAll(".message.quick").forEach(el => {
-        el.addEventListener("click", () => {
-          const input = document.getElementById("user-input");
-          input.value = el.textContent.replace(/^🔍\s*/, "");
-          input.focus();
-        });
+    document.querySelectorAll(".message.quick").forEach(el => {
+      el.addEventListener("click", () => {
+        const input = document.getElementById("user-input");
+        input.value = el.textContent.replace(/^🔍\s*/, "");
+        input.focus();
       });
-    </script>
-  </body>
+    });
+  </script>
+</body>
 </html>
