--- a/index.html
+++ b/index.html
@@ -129,49 +129,21 @@
             input.value = "";
             chatBox.scrollTop = chatBox.scrollHeight;
 
-            try {
-                const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ question })
-                });
+            const eventSource = new EventSource("https://web-production-6954e.up.railway.app/ask");
+            eventSource.onmessage = (event) => {
+                const data = JSON.parse(event.data);
+                responseMsg.innerHTML = data.data;
+                chatBox.scrollTop = chatBox.scrollHeight;
 
-                const reader = res.body.getReader();
-                const decoder = new TextDecoder("utf-8");
-                let fullText = "";
-
-                while (true) {
-                    const { done, value } = await reader.read();
-                    if (done) break;
-                    const chunk = decoder.decode(value, { stream: true });
-
-                    const lines = chunk.split("\n").filter(line => line.startsWith("data: "));
-                    for (const line of lines) {
-                        const jsonStr = line.replace(/^data:\s*/, "");
-                        try {
-                            const json = JSON.parse(jsonStr);
-                            const content = json.data || json.content || json.answer || "";
-                            fullText += content;
-                            responseMsg.textContent = fullText;
-                            chatBox.scrollTop = chatBox.scrollHeight;
-                        } catch (e) {
-                            console.warn("解析失败：", jsonStr);
-                        }
-                    }
-                }
-
-                // ✅ 提取 quick_question 标签内容
-                const matches = [...fullText.matchAll(/<quick_question>(.*?)<\/quick_question>/g)];
-                if (matches.length > 0) {
-                    responseMsg.innerHTML = fullText.replace(/<quick_question>.*?<\/quick_question>/g, "").trim();
-
+                const quickQuestions = document.querySelectorAll("quick_question");
+                if (quickQuestions.length > 0) {
                     const btnContainer = document.createElement("div");
                     btnContainer.style.marginTop = "8px";
 
-                    for (let m of matches) {
+                    quickQuestions.forEach(quickQuestion => {
                         const btn = document.createElement("span");
                         btn.className = "quick-question-btn";
-                        btn.textContent = m[1].trim();
+                        btn.textContent = quickQuestion.textContent.trim();
                         btn.onclick = () => {
                             const input = document.getElementById("user-input");
                             input.value = btn.textContent;
@@ -179,15 +151,32 @@
                             sendMessage();
                         };
                         btnContainer.appendChild(btn);
-                    }
+                    });
 
                     responseMsg.appendChild(btnContainer);
-                    chatBox.scrollTop = chatBox.scrollHeight;
+                }
+            };
+
+            eventSource.onerror = (error) => {
+                console.error("EventSource failed:", error);
+                responseMsg.textContent = "网络错误，请稍后重试。";
+                eventSource.close();
+            };
+
+            try {
+                const res = await fetch("https://web-production-6954e.up.railway.app/ask", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ question })
+                });
+
+                if (!res.ok) {
+                    throw new Error(`HTTP error! status: ${res.status}`);
                 }
 
             } catch (err) {
                 console.error(err);
-                responseMsg.textContent = "网络错误，请稍后重试。";
+                responseMsg.textContent = "请求错误，请稍后重试。";
             }
         }
 
