--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <title>曹先生智能问答</title>
   <style>
     * {
@@ -22,35 +22,50 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
+      object-position: center;
       z-index: -1;
     }
     .chat-container {
       position: absolute;
-      top: 17vh;
-      right: 7vw;
-      height: 76vh;
-      width: 50vw;
+      top: 10vh;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90vw;
+      max-width: 640px;
+      height: 80vh;
       padding: 20px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       backdrop-filter: blur(12px);
       background: rgba(255, 255, 255, 0.3);
-      box-shadow: -4px 0 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
       border-radius: 20px;
     }
     .messages {
       flex: 1;
       overflow-y: auto;
       padding-right: 10px;
+      display: flex;
+      flex-direction: column;
     }
     .message {
       margin-bottom: 12px;
-      background: rgba(255, 255, 255, 0.8);
       padding: 10px 14px;
       border-radius: 12px;
       max-width: 90%;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      word-break: break-word;
+    }
+    .message.user {
+      align-self: flex-end;
+      background-color: #007aff;
+      color: white;
+    }
+    .message.bot {
+      align-self: flex-start;
+      background-color: rgba(255, 255, 255, 0.8);
+      color: black;
     }
     .recommend {
       margin-top: 8px;
@@ -89,13 +104,13 @@
   <video class="video-bg" src="video.mov" autoplay muted loop></video>
   <div class="chat-container">
     <div class="messages" id="chat-box">
-      <div class="message">您好，请叫我曹先生</div>
-      <div class="message quick">🔍 红楼梦中有哪些美食？</div>
-      <div class="message quick">🔍 红楼梦中有哪些判词？</div>
-      <div class="message quick">🔍 红楼梦中有哪些故事？</div>
-      <div class="message quick">🔍 大梦·红楼有哪些值得一看的亮点？</div>
-      <div class="message quick">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
-      <div class="message quick">🔍 你是曹雪芹吗？你是如何AI重生的？</div>
+      <div class="message bot">您好，请叫我曹先生</div>
+      <div class="message recommend">🔍 红楼梦中有哪些美食？</div>
+      <div class="message recommend">🔍 红楼梦中有哪些判词？</div>
+      <div class="message recommend">🔍 红楼梦中有哪些故事？</div>
+      <div class="message recommend">🔍 大梦·红楼有哪些值得一看的亮点？</div>
+      <div class="message recommend">🔍 大梦·红楼和其他红楼梦演出有哪些不同？</div>
+      <div class="message recommend">🔍 你是曹雪芹吗？你是如何AI重生的？</div>
     </div>
     <div class="input-area">
       <input type="text" id="user-input" placeholder="请输入问题，Ctrl+Enter 发送" />
@@ -111,15 +126,13 @@
 
       const chatBox = document.getElementById("chat-box");
 
-      // 用户提问
       const userMsg = document.createElement("div");
-      userMsg.className = "message";
+      userMsg.className = "message user";
       userMsg.textContent = question;
       chatBox.appendChild(userMsg);
 
-      // 回答区
       const responseMsg = document.createElement("div");
-      responseMsg.className = "message";
+      responseMsg.className = "message bot";
       chatBox.appendChild(responseMsg);
 
       input.value = "";
@@ -157,7 +170,6 @@
           }
         }
 
-        // 处理 quick_question 提示
         const matches = fullText.matchAll(/<quick_question>([\s\S]*?)<\/quick_question>/g);
         for (const match of matches) {
           const q = match[1].trim();
@@ -166,7 +178,7 @@
           qDiv.textContent = "🔎 " + q;
           qDiv.onclick = () => {
             document.getElementById("user-input").value = q;
-            document.getElementById("user-input").focus();
+            sendMessage();
           };
           chatBox.appendChild(qDiv);
         }
@@ -183,11 +195,11 @@
       if ((e.ctrlKey || e.metaKey) && e.key === "Enter") sendMessage();
     });
 
-    document.querySelectorAll(".message.quick").forEach(el => {
+    document.querySelectorAll(".recommend").forEach(el => {
       el.addEventListener("click", () => {
         const input = document.getElementById("user-input");
         input.value = el.textContent.replace(/^🔍\s*/, "");
-        input.focus();
+        sendMessage();
       });
     });
   </script>
